fix updating stuff

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,7 +1,7 @@
 :root {
     --black: #0a0a0d;
     --black-2: #151519;
-    --black-3: #1b1b20;
+    --black-3: #202027;
     --black-4: #2c2c32;
     --black-trans: rgba(10, 10, 13, 0.9);
     --white: #efe9e7ff;
