add hotkeys for pages, add some eslint rules, start improving ux

--- a/src/styles/classes.css
+++ b/src/styles/classes.css
@@ -188,11 +188,9 @@ iframe {
 }
 
 .navigation-button {
-    width: 100%;
-    max-width: 100%;
     justify-content: center;
-    font-size: 1.5em;
-    padding: var(--gap-v);
+    font-size: 1.2em;
+    padding: var(--gap-h) var(--gap-v);
 }
 
 .navigation-button.active {
