use fjsc styles, improve some stuff, add page specific shortcuts

--- a/src/styles/classes.css
+++ b/src/styles/classes.css
@@ -12,21 +12,6 @@
     background: var(--bg-3);
 }
 
-.collapsible-header {
-    cursor: pointer;
-}
-
-.collapsible {
-    background: var(--bg-2);
-    padding: var(--gap-v);
-    border-radius: var(--input-border-radius);
-    border: var(--input-border-width) solid var(--bg-4);
-}
-
-.collapsible-content {
-    padding-top: var(--gap-v);
-}
-
 .fixed {
     position: fixed;
 }
@@ -334,10 +319,6 @@ input.slider:checked ~ .toggle-container .toggle-slider {
 }
 
 .tag-input {
-    padding: var(--input-padding-h) var(--input-padding-v);
-    border-radius: var(--input-border-radius);
-    background: var(--bg-2);
-    border: var(--input-border-width) solid var(--bg-4);
     width: 100%;
     max-width: max(300px, 30dvw);
     display: flex;
@@ -348,7 +329,7 @@ input.slider:checked ~ .toggle-container .toggle-slider {
 
 .tag {
     padding: var(--tag-padding);
-    border-radius: 999px;
+    border-radius: var(--input-border-radius) 50px 50px var(--input-border-radius);
     background: var(--bg-3);
     cursor: pointer;
     align-items: center;
@@ -358,6 +339,20 @@ input.slider:checked ~ .toggle-container .toggle-slider {
 
 .tag:hover {
     background: var(--bg-4);
+}
+
+.tag-icon {
+    border-radius: 999px;
+    background: var(--text);
+    color: var(--bg);
+    font-size: .8em;
+    display: flex;
+    padding: .25em;
+}
+
+.tag-icon:hover {
+    background: var(--bg-4);
+    color: var(--text);
 }
 
 input.invisible-input {
@@ -604,4 +599,21 @@ input.invisible-input {
     padding: 4px 6px;
     border-radius: var(--input-border-radius);
     font-weight: normal;
+}
+
+kbd {
+    background-color: var(--grey-light);
+    border-radius: var(--input-border-radius);
+    border: 1px solid var(--grey-dark);
+    box-shadow:
+            0 1px 1px rgba(0, 0, 0, 0.2),
+            0 2px 0 0 var(--grey-light) inset;
+    color: var(--bg);
+    display: inline-block;
+    font-size: 0.8em;
+    font-weight: 700;
+    font-family: 'Roboto', sans-serif;
+    line-height: 1;
+    padding: 2px 4px;
+    white-space: nowrap;
 }
