--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -26,17 +26,17 @@
     --tag-teal: #0c6d4b;
     --tag-magenta: #6d0c6d;
 
-    --font-size-base: 16px;
+    --font-size-base: 18px;
     --gap-h: 5px;
     --gap-v: 10px;
     --input-padding-h: 0.5rem;
     --input-padding-v: 0.25rem;
-    --input-border-radius: 0.25rem;
+    --input-border-radius: 5px;
     --input-border-width: 1px;
     --avatar-border-width: 2px;
     --animation-time: 0.25s;
     --message-padding-left: 3em;
-    --tag-padding: 0.4em 0.8em;
+    --tag-padding: 0.3em 0.3em 0.3em 0.6em;
     --tab-padding: 0.6em 1.2em;
 
     --bg: var(--black);
@@ -180,7 +180,6 @@ a:hover {
 
 label {
     color: var(--text-2);
-    padding: var(--gap-v);
     border-radius: var(--input-border-radius);
     background-color: var(--bg-3);
     gap: 0;
