--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -39,6 +39,10 @@
     --tag-padding: 0.3em 0.3em 0.3em 0.6em;
     --tab-padding: 0.6em 1.2em;
 
+    --default-font-family: "Inter Tight", serif;
+    --fjsc-font: var(--default-font-family);
+    --mono-font: monospace;
+
     --bg: var(--black);
     --bg-2: var(--black-2);
     --bg-3: var(--black-3);
@@ -73,12 +77,12 @@ html, body {
     margin: 0;
     padding: 0;
     overflow: hidden;
+    font-family: var(--default-font-family);
 }
 
 body {
     background-color: var(--bg);
     color: var(--text);
-    font-family: 'Roboto', sans-serif;
     font-size: var(--font-size-base);
     margin: 0;
     padding: 0;
@@ -116,7 +120,7 @@ button, input, textarea, select {
     border: var(--input-border-width) solid var(--bg-4);
     border-radius: var(--input-border-radius);
     color: var(--text);
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--default-font-family);
     font-size: var(--font-size-base);
     margin: 0;
     padding: var(--input-padding-v) var(--input-padding-h);
@@ -413,7 +417,7 @@ hr {
 
 textarea {
     resize: vertical;
-    font-family: 'GeistMonoNerdFontMono', monospace;
+    font-family: var(--mono-font);
 }
 
 .error {
