layout, more poppin colors

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,8 +12,8 @@
     --grey-dark: #646464;
 
     --blue: #0b72bc;
-    --green: #6a994eff;
-    --red: #bc4749ff;
+    --green: #69c732;
+    --red: #c43e40;
     --yellow: #f0c929ff;
     --orange: #f09029;
     --purple: #6a4c93ff;
