--- a/src/styles/classes.css
+++ b/src/styles/classes.css
@@ -161,10 +161,14 @@
     transition: width 0.2s ease;
 }
 
-.panel {
+.panel, .bordered-panel {
     padding: var(--gap-v);
     border-radius: var(--input-border-radius);
     background: var(--bg-2);
+}
+
+.bordered-panel {
+    border: 1px solid var(--bg-4);
 }
 
 iframe {
