--- a/src/styles/classes.css
+++ b/src/styles/classes.css
@@ -176,16 +176,10 @@ iframe {
     height: 100vh;
 }
 
-.navigation-button {
-    justify-content: center;
-    font-size: 1.2em;
-    padding: var(--gap-h) var(--gap-v);
-}
-
 .navigation-button.active {
-    background: var(--text-4);
-    color: var(--bg);
-    border-color: var(--bg);
+    background: var(--blue);
+    color: var(--text);
+    border-color: var(--blue);
 }
 
 .modal {
@@ -418,11 +412,16 @@ input.invisible-input {
     padding: var(--tab-padding);
     background: var(--bg-3);
     cursor: pointer;
+    border: var(--input-border-width) solid var(--text-4);
+    border-right: none;
+}
+
+.tab-button:hover {
+    background: var(--bg-4);
 }
 
 .tab-button.active {
     background: var(--text-4);
-    border-color: var(--bg-4);
     color: var(--bg);
 }
 
@@ -434,6 +433,7 @@ input.invisible-input {
 .tab-button:last-child {
     border-top-right-radius: var(--input-border-radius);
     border-bottom-right-radius: var(--input-border-radius);
+    border-right: var(--input-border-width) solid var(--text-4);
 }
 
 .timeline-jobs-container {
