--- a/src/styles/classes.css
+++ b/src/styles/classes.css
@@ -1,3 +1,8 @@
+.app {
+    height: 100dvh;
+    width: 100dvw;
+}
+
 .restrict-to-window {
     max-width: 100vw;
     max-height: 100vh;
@@ -161,10 +166,14 @@
     transition: width 0.2s ease;
 }
 
-.panel, .bordered-panel {
+.panel, .bordered-panel, .card {
     padding: var(--gap-v);
     border-radius: var(--input-border-radius);
     background: var(--bg-2);
+}
+
+.card {
+    background: var(--bg-3);
 }
 
 .bordered-panel {
@@ -496,30 +505,31 @@ input.invisible-input {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 1;
+    z-index: 2;
 }
 
 .timeline-job.disposition:before {
-    background: var(--tag-green);
+    background: var(--job-disposition);
+    border-color: var(--job-disposition-border);
 }
 
 .timeline-job.draft:before {
-    background: var(--tag-purple);
-    border-color: var(--tag-purple);
+    background: var(--job-draft);
+    border-color: var(--job-draft-border);
 }
 
 .timeline-job.disposition {
-    border: 2px solid var(--tag-green);
+    border: 2px solid var(--job-disposition-border);
 }
 
 .timeline-job.draft {
-    border: 2px solid var(--tag-purple);
+    border: 2px solid var(--job-draft-border);
 }
 
 .timeline-job-content {
     position: relative;
-    z-index: 2;
-    padding: var(--gap-v);
+    z-index: 3;
+    padding: var(--gap-h) var(--gap-v);
     background: var(--bg-2);
     border-radius: var(--input-border-radius);
 }
@@ -527,20 +537,22 @@ input.invisible-input {
 .timeline-job-details {
     display: none;
     position: absolute;
-    top: calc(100% + 2px);
+    top: calc(100% - var(--input-border-radius));
     left: -2px;
     box-sizing: border-box;
     border-radius: var(--input-border-radius);
     border: 2px solid var(--bg-4);
-    z-index: 5;
+    z-index: 1;
 }
 
 .timeline-job.disposition .timeline-job-details {
-    border-color: var(--tag-green);
+    background: var(--job-disposition);
+    border-color: var(--job-disposition-border);
 }
 
 .timeline-job.draft .timeline-job-details {
-    border-color: var(--tag-purple);
+    background: var(--job-draft);
+    border-color: var(--job-draft-border);
 }
 
 .timeline-job:hover .timeline-job-details {
