--- a/src/styles/classes.css
+++ b/src/styles/classes.css
@@ -776,6 +776,10 @@ kbd {
     background: var(--bg-4);
 }
 
+.date-overview-day.outlined {
+    border: 1px solid var(--green);
+}
+
 .date-overview-day.today {
     border: 2px solid var(--blue);
     font-weight: bold;
